alignements are fixed

--- a/src/app/common/sidebar/sidebar.component.css
+++ b/src/app/common/sidebar/sidebar.component.css
@@ -17,6 +17,7 @@ ul li{
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    cursor: pointer;
 }
 ul li a{
     text-decoration: none;
